# 10-clientapps

./: Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
hackernews/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.config.js
hackernews/htmls/: comment.html  index.html  main.html  send.html  story_item.html
hackernews/src/: api.rs  lib.rs  main.rs
hackernews/src/ui/: comments.rs  mod.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: mod.rs
