[package]
name = "hackernews"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "json",
] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
futures = "0.3.30"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
